# rio

./: readme.md
bare_metal/: .gitignore  compile_flags.txt  counter.c  counter_no_tasks  counter_no_tasks.c  lu_counter.c  lu_mkl.c  lu_tiled.c  lu_tiled_mkl.c  makefile  mm.c  mm_counter.c  mm_mkl.c  mm_tiled.c  mm_tiled_mkl.c  readme.md  time_mm_mkl.c
bench/: Cargo.toml  build.rs  readme.md
bench/examples/: mm.c  simple.c  simple_rust  simple_rust.rs
bench/src/: cli.rs  command.rs  main.rs  monitor.rs  program.rs  stats.rs
rio/: Cargo.toml
rio/experiments/: Cargo.toml  readme.md
rio/experiments/src/: counter.rs  counter_deps.rs  lu_counter.rs  mm_counter.rs
rio/rio/: Cargo.toml
rio/rio/src/: data.rs  lib.rs  runtime.rs  task_macro.rs
scrips/: benchmark_efficiency.py  benchmark_workers.py  mutex_contention.sh  plot.py  plot_efficiency.py  plot_workers.py  run.py
specs/: .gitignore  RunInOrder.tla  RunInOrderModelChecker.tla  RunInOrderModelChecker2x2.cfg  RunInOrderModelChecker2x2.tla  RunInOrderModelChecker3x2.tla  RunInOrderModelChecker3x3.tla  STFModelChecker.tla  STFModelChecker2x2.cfg  STFModelChecker2x2.tla  STFModelChecker3x2.tla  STFModelChecker3x3.tla  STFSpec.tla  check_rio.sh  check_rio2x2.sh  check_rio3x2.sh  check_rio3x3.sh  check_stf.sh  check_stf2x2.sh  check_stf3x2.sh  check_stf3x3.sh  download_tla.sh  readme.md
starpu/: .gitignore  compile_flags.txt  counter.c  counter_deps.c  lu_counter.c  makefile  mm_counter.c  readme.md
