[package]
name = "bench"
version = "0.1.0"
authors = ["CharlyCst <charly.castes@inria.fr>"]
edition = "2018"

[dependencies]
perf-event = "0.4.7"
dlopen = "0.1.8"
dlopen_derive = "0.1"
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
shellwords = "1.1.0"
nix = "0.20.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.0", features = ["termination"] }

